# RGTC_Module

./: CITATION.cff  README.md
classification/: pyproject.toml
classification/checkpoints/: README.md
classification/data/: README.md
classification/results/diagnostics/: deit_small_robust_bs64.csv
classification/results/final/: table1_vit_throughput.csv  table2_deit_fixed_beta.csv
classification/results/legacy/: vit_b_flops_results.csv  vit_l_main_results.csv
classification/results/per_sample/: vit_b_ours_r16_correct.npy  vit_b_tome_r8_correct.npy  vit_l_ours_r4_correct.npy  vit_l_ours_r8_correct.npy  vit_l_tome_r4_correct.npy
classification/results/sweeps/: deit_base_beta_sweep.csv  vit_l_beta_sweep.csv
classification/scripts/: evaluate_imagenet.py  inspect_token_schedule.py  reproduce_table1_vit_fixed_beta.py  reproduce_table3_final_token_count.py  reproduce_table5_beta_sensitivity.py
stable_diffusion/: README.md  THIRD_PARTY.md  environment.yml  pyproject.toml
stable_diffusion/checkpoints/: README.md
stable_diffusion/configs/: stable_diffusion_v15_r05.yaml
stable_diffusion/data/prompts/: beta_selection_first20.txt  imagenet1k_prompts.txt
stable_diffusion/results/: README.md
stable_diffusion/results/final/: generation_log.csv  metrics_summary.csv  paired_stability.csv
stable_diffusion/scripts/: analyze_pairwise_quality.py  create_qualitative_figure.py  evaluate_metrics.py  generate_imagenet.py  generate_imagenet_legacy_protocol.py  paired_stability.py  prepare_fid_reference.py  select_beta.py
stable_diffusion/src/rgtc_sd/: __init__.py  (+9 more)
(+47 files in other folders)
