[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rgtc-classification"
version = "1.0.0"
description = "Reliability-guided token compression for timm ViT and DeiT models"
requires-python = ">=3.9"
dependencies = ["torch>=1.13", "torchvision>=0.14", "timm>=0.6", "numpy", "pillow", "tqdm", "fvcore", "matplotlib", "pandas"]

[tool.setuptools.packages.find]
where = ["src"]
