[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"
[project]
name="rgtc-sd"
version="1.0.0"
requires-python=">=3.9"
dependencies=["torch","numpy","pillow","tqdm","transformers","lpips","pytorch-msssim","pytorch-fid","scipy","pandas"]
[tool.setuptools.packages.find]
where=["src"]
